tests/rosetta/out/Smalltalk/binary-strings.out
/tmp/binary-strings.st:12: parse error, expected ']'
