tests/rosetta/out/Smalltalk/binary-strings.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| char letters idx fromBytes s i b c d z sub f val rem |
char := [:n | letters := 'abcdefghijklmnopqrstuvwxyz'.
idx := (n - 97).
((((idx < 0)) or: [((idx >= 26))])) ifTrue: [
'?'.
] .
(letters copyFrom: idx to: (idx + 1)). ].
fromBytes := [:bs | s := ''.
i := 0.
[(i < ((bs size)))] whileTrue: [.
s := (s + (char value: bs at: i)).
i := (i + 1).
].
.
s. ].
b := {98. 105. 110. 97. 114. 121}.
Transcript show: ((b asString)) printString; cr.
c := b.
Transcript show: ((c asString)) printString; cr.
Transcript show: (((b = c) asString)) printString; cr.
d := {}.
i := 0.
[(i < 6)] whileTrue: [.
d := d copyWith: b at: i.
i := (i + 1).
].
.
d at: 1 put: 97.
d at: 4 put: 110.
Transcript show: (fromBytes value: b) printString; cr.
Transcript show: (fromBytes value: d) printString; cr.
Transcript show: (((6 = 0) asString)) printString; cr.
z := b copyWith: 122.
Transcript show: (fromBytes value: z) printString; cr.
sub := b copyFrom: (1 + 1) to: 3.
Transcript show: (fromBytes value: sub) printString; cr.
f := {}.
i := 0.
[(i < ((d size)))] whileTrue: [.
val := d at: i.
((val = 110)) ifTrue: [
f := f copyWith: 109.
] ifFalse: [
f := f copyWith: val.
].
i := (i + 1).
].
.
Transcript show: (((((fromBytes value: d) + (' -> '))) + (fromBytes value: f))) printString; cr.
rem := {}.
rem := rem copyWith: b at: 0.
i := 3.
[(i < 6)] whileTrue: [.
rem := rem copyWith: b at: i.
i := (i + 1).
].
.
Transcript show: (fromBytes value: rem) printString; cr.
